product-detail Maj

--- a/Fringes.html
+++ b/Fringes.html
@@ -145,7 +145,7 @@
                 <a href="categories.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Gammes</a>
               </li>
               <li>
-                <a href="Frange.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Franges & Bobines</a>
+                <a href="Fringes.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Fringes & Bobines</a>
               </li>
               <li>
                 <a href="contact.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Contactez-nous</a>
@@ -208,7 +208,7 @@
 
         <!-- Products -->
         <div class="justify-center flex text-center pt-10">
-            <h1 class="font-bold mb-4 text-[44px] max-sm:text-2xl font-mono">Franges</h1>
+            <h1 class="font-bold mb-4 text-[44px] max-sm:text-2xl font-mono">Fringes</h1>
           </div>
           
           <div class="grid max-sm:grid-cols-2 lg:grid-cols-5 px-4 gap-2 pb-12 lg:px-80">
@@ -217,7 +217,7 @@
                 <img src="assets/f1.jpg" class="product_images" loading="lazy">
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
-                <h1 class="font-mono font-bold text-center">Frange</h1>
+                <h1 class="font-mono font-bold text-center">Fringes</h1>
               </div>
               <div class="grid grid-cols-2" >
                 <div class="border border-r border-gray-900 p-1">
@@ -233,7 +233,7 @@
                 <img src="assets/f2.jpg" class="product_images" loading="lazy">
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
-                <h1 class="font-mono font-bold text-center">Frange</h1>
+                <h1 class="font-mono font-bold text-center">Fringes</h1>
               </div>
               <div class="grid grid-cols-2" >
                 <div class="border border-r border-gray-900 p-1">
@@ -249,7 +249,7 @@
                 <img src="assets/f3.jpg" class="product_images" loading="lazy" >
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
-                <h1 class="font-mono font-bold text-center">Frange</h1>
+                <h1 class="font-mono font-bold text-center">Fringes</h1>
               </div>
               <div class="grid grid-cols-2" >
                 <div class="border border-r border-gray-900 p-1">
@@ -265,7 +265,7 @@
                 <img src="assets/f4.jpg" class="product_images" loading="lazy">
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
-                <h1 class="font-mono font-bold text-center">Frange</h1>
+                <h1 class="font-mono font-bold text-center">Fringes</h1>
               </div>
               <div class="grid grid-cols-2" >
                 <div class="border border-r border-gray-900 p-1">
@@ -281,7 +281,7 @@
                 <img src="assets/f5.jpg" class="product_images" loading="lazy">
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
-                <h1 class="font-mono font-bold text-center">Frange</h1>
+                <h1 class="font-mono font-bold text-center">Fringes</h1>
               </div>
               <div class="grid grid-cols-2" >
                 <div class="border border-r border-gray-900 p-1">
@@ -297,7 +297,7 @@
                 <img src="assets/f6.jpg" class="product_images" loading="lazy">
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
-                <h1 class="font-mono font-bold text-center">Frange</h1>
+                <h1 class="font-mono font-bold text-center">Fringes</h1>
               </div>
               <div class="grid grid-cols-2" >
                 <div class="border border-r border-gray-900 p-1">
@@ -313,7 +313,7 @@
                 <img src="assets/f7.jpg" class="product_images" loading="lazy">
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
-                <h1 class="font-mono font-bold text-center">Frange</h1>
+                <h1 class="font-mono font-bold text-center">Fringes</h1>
               </div>
               <div class="grid grid-cols-2" >
                 <div class="border border-r border-gray-900 p-1">
@@ -329,7 +329,7 @@
                 <img src="assets/f8.jpg" class="product_images" loading="lazy">
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
-                <h1 class="font-mono font-bold text-center">Frange</h1>
+                <h1 class="font-mono font-bold text-center">Fringes</h1>
               </div>
               <div class="grid grid-cols-2" >
                 <div class="border border-r border-gray-900 p-1">
@@ -345,7 +345,7 @@
                 <img src="assets/f9.jpg" class="product_images" loading="lazy">
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
-                <h1 class="font-mono font-bold text-center">Frange</h1>
+                <h1 class="font-mono font-bold text-center">Fringes</h1>
               </div>
               <div class="grid grid-cols-2" >
                 <div class="border border-r border-gray-900 p-1">
@@ -361,7 +361,7 @@
                 <img src="assets/f10.jpg" class="product_images" loading="lazy">
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
-                <h1 class="font-mono font-bold text-center">Frange</h1>
+                <h1 class="font-mono font-bold text-center">Fringes</h1>
               </div>
               <div class="grid grid-cols-2" >
                 <div class="border border-r border-gray-900 p-1">
@@ -377,7 +377,7 @@
                 <img src="assets/f11.jpg" class="product_images" loading="lazy">
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
-                <h1 class="font-mono font-bold text-center">Frange</h1>
+                <h1 class="font-mono font-bold text-center">Fringes</h1>
               </div>
               <div class="grid grid-cols-2" >
                 <div class="border border-r border-gray-900 p-1">
@@ -393,7 +393,7 @@
                 <img src="assets/f12.jpg" class="product_images" loading="lazy">
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
-                <h1 class="font-mono font-bold text-center">Frange</h1>
+                <h1 class="font-mono font-bold text-center">Fringes</h1>
               </div>
               <div class="grid grid-cols-2" >
                 <div class="border border-r border-gray-900 p-1">
@@ -409,7 +409,7 @@
                 <img src="assets/f13.jpg" class="product_images" loading="lazy">
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
-                <h1 class="font-mono font-bold text-center">Frange</h1>
+                <h1 class="font-mono font-bold text-center">Fringes</h1>
               </div>
               <div class="grid grid-cols-2" >
                 <div class="border border-r border-gray-900 p-1">
@@ -425,7 +425,7 @@
                 <img src="assets/f14.jpg" class="product_images" loading="lazy">
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
-                <h1 class="font-mono font-bold text-center">Frange</h1>
+                <h1 class="font-mono font-bold text-center">Fringes</h1>
               </div>
               <div class="grid grid-cols-2" >
                 <div class="border border-r border-gray-900 p-1">
@@ -441,7 +441,7 @@
                 <img src="assets/f15.jpg" class="product_images" loading="lazy">
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
-                <h1 class="font-mono font-bold text-center">Frange</h1>
+                <h1 class="font-mono font-bold text-center">Fringes</h1>
               </div>
               <div class="grid grid-cols-2" >
                 <div class="border border-r border-gray-900 p-1">
