--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
       height: 100%;
       object-fit: cover;
     }
+    .swiper-slide1 {
+      background-position: center;
+      object-fit: cover;
+      background-size: cover;
+      width: 300px;
+      height: 300px;
+    }
+
+    .swiper-slide1 img {
+      display: block;
+      width: 100%;
+      height: 100%;
+    }
+    .product_images{
+      height: 350px;
+    }
   </style>
 <body>
     <div  class="max-sm:hidden relative isolate flex items-center gap-x-6 overflow-hidden bg-gray-800 px-6 py-3.5 sm:px-2.5 sm:before:flex-1 ">
@@ -115,7 +131,7 @@
           <a href="categories.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Gammes</a>
         </li>
         <li>
-          <a href="Frange.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Franges & Bobines</a>
+          <a href="Fringes.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Fringes & Bobines</a>
         </li>
         <li>
           <a href="contact.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Contactez-nous</a>
@@ -310,22 +326,22 @@
 
 
     <div class="justify-center flex text-center pb-10 mt-12">
-      <h1 class="font-bold mb-4 text-[44px] max-sm:text-2xl font-mono">Franges</h1>
+      <h1 class="font-bold mb-4 text-[44px] max-sm:text-2xl font-mono">Fringes</h1>
     </div>
       <div class="grid grid-cols-2 gap-8 lg:mt-12 max-sm:block">
         <div class="lg:pl-36 max-sm:px-12 inset-0 w-full h-full object-cover object-center">
-          <img src="assets/frange.jpg" alt="frange" class=" object-center object-cover">
+          <img src="assets/frange.jpg" alt="Fringes" class=" object-center object-cover">
         </div>
         <div>
           <div class="row lg:pr-12 max-sm:pt-8">
-            <h1 class="lg:text-[36px] max-sm:text-[24px] text-center font-bold font-mono max-sm:px-8">Oriental & Tapis Synthétique Frange Dos</h1>
-            <p class="lg:mt-12 lg:text-2xl max-sm:text-md text-center max-sm:pt-4 max-sm:px-12">Tout nouveau tapis NC Fringe Graphique magnifique tapis Oriental frange en 15 Style/couleurs choix
+            <h1 class="lg:text-[36px] max-sm:text-[24px] text-center font-bold font-mono max-sm:px-8">Oriental & Tapis Synthétique Fringes Dos</h1>
+            <p class="lg:mt-12 lg:text-2xl max-sm:text-md text-center max-sm:pt-4 max-sm:px-12">Tout nouveau tapis NC Fringe Graphique magnifique tapis Oriental Fringes en 15 Style/couleurs choix
               commandes prêt à expédier le 15 Novembre chaud hors des presses ! 5 choix de couleurs : noir, Naturel, Beige, Marron, Ivoire.</p>
               <ul class="text-center mt-3">
                 <li>15 combinaisons de couleurs/styles</li>
-                <li> 4 Différents styles de noeuds et frange brossée</li>
+                <li> 4 Différents styles de noeuds et Fringes brossée</li>
                 <li>Disponible en 11 yards/10 mètres = 33 pieds</li>
-                <li>3,5 » et 5 » frange notée sur le graphique</li>
+                <li>3,5 » et 5 » Fringes notée sur le graphique</li>
               </ul>
           </div>
           <div class="row pr-12">
@@ -370,7 +386,7 @@
           <div class="mt-6 max-sm:text-center max-sm:justify-center max-sm:flex max-sm:ml-12 ">
             <a
               class="inline-block px-5 py-3 w-32 rounded-lg uppercase tracking-wider font-semibold text-sm text-white shadow-lg sm:text-base hover:bg-blue-100 focus:ring-4 focus:outline-none focus:ring-blue-300 bg-blue-500 hover:bg-blue-700 focus:ring-blue-800"
-              href="Frange.html"
+              href="Fringes.html"
             >
               Voir Plus
             </a>
@@ -382,17 +398,40 @@
       <div class="justify-center flex text-center pb-10 lg:mt-24 max-sm:mt-12">
         <h1 class="font-bold mb-2 text-[44px] max-sm:text-2xl font-mono">Bobines</h1>
       </div>
-      <swiper-container class="mySwiper3 lg:px-36 max-sm:mb-12" pagination="true" pagination-clickable="true" space-between="20"
-      slides-per-view="4">
-      <swiper-slide class="mySwiper31"><img src="assets/b1.jpg" alt=""></swiper-slide>
-      <swiper-slide class="mySwiper31"><img src="assets/b2.jpg" alt=""></swiper-slide>
-      <swiper-slide class="mySwiper31"><img src="assets/b3.jpg" alt=""></swiper-slide>
-      <swiper-slide class="mySwiper31"><img src="assets/b5.jpg" alt=""></swiper-slide>
-      <swiper-slide class="mySwiper31"><img src="assets/b1.jpg" alt=""></swiper-slide>
-      <swiper-slide class="mySwiper31"><img src="assets/b2.jpg" alt=""></swiper-slide>
-      <swiper-slide class="mySwiper31"><img src="assets/b3.jpg" alt=""></swiper-slide>
-      <swiper-slide class="mySwiper31"><img src="assets/b5.jpg" alt=""></swiper-slide>
-      </swiper-container>
+      <swiper-container class="mySwiper swiper-container1 lg:px-36 lg:py-8 max-sm:py-8 " pagination="true" effect="coverflow" grab-cursor="true" centered-slides="true"
+      slides-per-view="auto" coverflow-effect-rotate="50" coverflow-effect-stretch="0" coverflow-effect-depth="100"
+      coverflow-effect-modifier="1" coverflow-effect-slide-shadows="true">
+      <swiper-slide class="swiper-slide1">
+        <img src="assets/b1.jpg"/>
+      </swiper-slide>
+      <swiper-slide class="swiper-slide1">
+        <img src="assets/b2.jpg"/>
+      </swiper-slide>
+      <swiper-slide class="swiper-slide1">
+        <img src="assets/b3.jpg"/>
+      </swiper-slide>
+      <swiper-slide class="swiper-slide1">
+        <img src="assets/b4.jpg"/>
+      </swiper-slide>
+      <swiper-slide class="swiper-slide1">
+        <img src="assets/b5.jpg"/>
+      </swiper-slide>
+      <swiper-slide class="swiper-slide1">
+        <img src="assets/b1.jpg"/>
+      </swiper-slide>
+      <swiper-slide class="swiper-slide1">
+        <img src="assets/b2.jpg"/>
+      </swiper-slide>
+      <swiper-slide class="swiper-slide1">
+        <img src="assets/b3.jpg"/>
+      </swiper-slide>
+      <swiper-slide class="swiper-slide1">
+        <img src="assets/b4.jpg"/>
+      </swiper-slide>
+      <swiper-slide class="swiper-slide1">
+        <img src="assets/b5.jpg"/>
+      </swiper-slide>
+    </swiper-container>
 
 </main>
 
