--- a/produit.html
+++ b/produit.html
@@ -145,7 +145,7 @@
                 <a href="categories.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Nos Gammes</a>
               </li>
               <li>
-                <a href="Frange.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Franges & Bobines</a>
+                <a href="Fringes.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Fringes & Bobines</a>
               </li>
               <li>
                 <a href="contact.html" class="block py-2 pl-3 pr-4 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 text-white md:hover:text-blue-500 hover:bg-gray-700 hover:text-white md:hover:bg-transparent border-gray-700">Contactez-nous</a>
@@ -233,7 +233,9 @@
         <div class="grid max-sm:grid-cols-2 lg:grid-cols-4 px-4 gap-2 pb-12 lg:px-80">
             <div class="border border-gray-900">
               <div class="row border border-gray-900 ">
+                <a href="detail-product.html">
                 <img src="assets/1.jpg" class="product_images" loading="lazy">
+                </a>
               </div>
               <div class="row border border-gray-900 p-1 bg-gray-100">
                 <h1 class="font-mono font-bold text-center">Margoum</h1>
